--- a/navbar.html
+++ b/navbar.html
@@ -52,6 +52,7 @@
                         </li>
                     </ul>
                 </nav>
+                <button id="btn-checar-emails" class="btn btn-warning" type="button">Checar caixa de entrada</button>
             </div>
         </div>
     </header>
@@ -88,6 +89,31 @@
         </section>
     </div>
 
-    <script src="./lib/bootstrap.bundle.min.js"></script>
+    <div class="toast-container position-fixed botton-0 end-0 p-3">
+        <div class="toast" id="mensagem-alerta" >
+            <header class="toast-header">
+                <strong>Importante</strong>
+            </header>
+            <div class="toast-body">
+                Você possui 100 mensagens não lidas
+                <div class="mt-2 pt-2 border-top">
+                    <button data-bs-dismiss="toast" class="btn btn-danger" type="button">Descartar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        const ativadorToast = document.getElementById('btn-checar-emails')
+        const mensagem = document.getElementById('mensagem-alerta')
+
+        if (ativadorToast) {
+            ativadorToast.addEventListener('click', function() {
+                const toast = new bootstrap.Toast(mensagem);
+                toast.show();
+            })
+        }
+    </script>
 </body>
 </html>
