--- a/navbar.html
+++ b/navbar.html
@@ -89,7 +89,7 @@
         </section>
     </div>
 
-    <div class="toast-container position-fixed botton-0 end-0 p-3">
+    <div class="toast-container position-fixed bottom-0 end-0 p-3">
         <div class="toast" id="mensagem-alerta" >
             <header class="toast-header">
                 <strong>Importante</strong>
